--- a/todo-app/todo-backend/docker-compose.dev.yml
+++ b/todo-app/todo-backend/docker-compose.dev.yml
@@ -11,7 +11,8 @@ services:
       MONGO_INITDB_DATABASE: the_database
     volumes:
       - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
-      - mongo_data:/data/db
+      - ./mongo_data:/data/db
+
   redis:
     image: redis
     ports: 
@@ -19,6 +20,24 @@ services:
     command: ['redis-server', '--appendonly', 'yes']
     volumes:
      - ./redis_data:/data
-    
-volumes:
-  mongo_data:
+
+  server:
+    image: todo-backend-server
+    build:
+      context: . # The context will pick this directory as the "build context"
+      dockerfile: dev.Dockerfile # This will simply tell which dockerfile to read
+    volumes:
+      - ./:/usr/src/app
+    ports:
+      - 3001:3000
+    container_name: todo-backend-dev
+    environment:
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+      - REDIS_URL=redis://redis:6379
+    depends_on:
+      - mongo
+      - redis
+    command: npm run dev
+      
+  debug-helper:
+    image: busybox
