--- a/todo-app/todo-frontend/docker-compose.dev.yml
+++ b/todo-app/todo-frontend/docker-compose.dev.yml
@@ -5,7 +5,7 @@ services:
       context: . # The context will pick this directory as the "build context"
       dockerfile: dev.Dockerfile # This will simply tell which dockerfile to read
     volumes:
-      - ./:/usr/src # The path can be relative, so ./ is enough to say "the same location as the docker-compose.yml"
+      - ./:/usr/src/app # The path can be relative, so ./ is enough to say "the same location as the docker-compose.yml"
     ports:
       - 3000:3000
-    container_name: todo-frontend-dev # This will name the container hello-front-dev
+    container_name: todo-frontend-dev # This will name the container 
