--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -1,4 +1,5 @@
 services:
+
   app:
     image: todo-frontend
     build:
@@ -9,6 +10,45 @@ services:
     ports:
       - 3000:3000
     container_name: todo-frontend-dev # This will name the container
+
+  mongo:
+    image: mongo
+    ports:
+     - 3456:27017
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: root
+      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_DATABASE: the_database
+    volumes:
+      - ./todo-backend/mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js
+      - ./todo-backend/mongo_data:/data/db
+
+  redis:
+    image: redis
+    ports: 
+     - 6379:6379
+    command: ['redis-server', '--appendonly', 'yes']
+    volumes:
+     - ./todo-backend/redis_data:/data
+
+  server:
+    image: todo-backend-server
+    build:
+      context: ./todo-backend/ # The context will pick this directory as the "build context"
+      dockerfile: ./todo-backend/dev.Dockerfile # This will simply tell which dockerfile to read
+    volumes:
+      - ./todo-backend/:/usr/src/app
+    ports:
+      - 3001:3000
+    container_name: todo-backend-dev
+    environment:
+      - MONGO_URL=mongodb://the_username:the_password@mongo:27017/the_database
+      - REDIS_URL=redis://redis:6379
+    depends_on:
+      - mongo
+      - redis
+    command: npm run dev
+
   nginx:
     image: nginx:1.20.1
     volumes:
@@ -17,4 +57,4 @@ services:
       - 8080:80
     container_name: reverse-proxy
     depends_on:
-      - app # wait for the frontend container to be started 
+      - app # wait for the frontend container to be started
