--- a/my-app/docker-compose.yml
+++ b/my-app/docker-compose.yml
@@ -1,34 +1,34 @@
 services:
 
   app:
-    image: my-app-front-dev
+    image: my-app-front
     build:
       context: ./frontend/ # The context will pick this directory as the "build context"
-      dockerfile: ./dev.Dockerfile # This will simply tell which dockerfile to read
+      dockerfile: ./Dockerfile # This will simply tell which dockerfile to read
     environment:
       REACT_APP_BACKEND_URL: http://nginx:80
     volumes:
       - ./frontend/:/usr/src/app # The path can be relative, so ./ is enough to say "the same location as the docker-compose.yml"
-    container_name: my-app-front-dev # This will name the container
+    container_name: my-app-front # This will name the container
 
   server:
-    image: my-app-back-dev
+    image: my-app-back
     build:
       context: ./backend/ # The context will pick this directory as the "build context"
-      dockerfile: ./dev.Dockerfile # This will simply tell which dockerfile to read
+      dockerfile: ./Dockerfile # This will simply tell which dockerfile to read
     volumes:
       - ./backend/:/usr/src/app
-    container_name: my-app-back-dev
+    container_name: my-app-back
     environment:
-      - MONGO_URI=${MONGO_URI_DEV}
+      - MONGO_URI=${MONGO_URI_PROD}
       - SECRET=${SECRET}
       - PORT=3000
   nginx:
     image: nginx:1.20.1
     volumes:
-      - ./nginx.dev.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     ports:
       - 8080:80
-    container_name: my-app-reverse-proxy-dev
+    container_name: my-app-reverse-proxy
     depends_on:
       - app # wait for the frontend container to be started
